@@ -1,0 +1,3 @@
+            <ul class="nav pull-left">
+                <li><a tabindex="-1" href="blog2.html"><i class="icon-forward"></i> Blog Panel</a></li>
+            </ul>
