@@ -1,0 +1,4 @@
+            <ul class="nav navbar-nav">
+                <li><a tabindex="-1" href="blog1.html"><span class="glyphicon glyphicon-backward"></span> Blog</a></li>
+                <li><a tabindex="-1" href="release1.html"><span class="glyphicon glyphicon-forward"></span> Release</a></li>
+            </ul>
