@@ -1,0 +1,4 @@
+            <ul class="nav pull-left">
+                <li><a tabindex="-1" href="blog1.html"><i class="icon-backward"></i> Blog</a></li>
+                <li><a tabindex="-1" href="release1.html"><i class="icon-forward"></i> Release</a></li>
+            </ul>
