@@ -1,0 +1,42 @@
+= My Blog
+:author: Laurent Laville
+
+== Here are my posts
+
+[role="timeline",cols="3,8",citetitle="Last updated {docdate} {doctime}",attribution="{author}"]
+.[label label-default]#November 17, 2013# [small clearfix]#tags: demo#
+--
+[big]*Lorem ipsum*
+
+Why not attribuate this article by `citetitle` and `attribution` attributes.
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus condimentum dui id lectus viverra placerat.
+Sed arcu ipsum, posuere et scelerisque ac, eleifend id turpis. Ut vitae velit congue,
+sollicitudin nisi eu, vestibulum lorem. Praesent lectus turpis, ullamcorper vehicula volutpat interdum,
+vestibulum condimentum elit. Aliquam erat volutpat. Donec vulputate, dolor vitae molestie convallis,
+lacus elit auctor ipsum, sed pharetra augue justo id nisl. Vivamus imperdiet neque ac nunc malesuada,
+nec semper mauris viverra. Morbi venenatis ornare dictum. In pulvinar pellentesque felis,
+a bibendum mauris tempus interdum. Vestibulum vehicula diam id dolor tincidunt consequat.
+Fusce quis enim ultrices metus tincidunt malesuada. Vestibulum at placerat dolor.
+Aliquam venenatis aliquam mi sit amet cursus. Donec condimentum dolor ut posuere condimentum.
+Vivamus viverra nisl massa. Quisque turpis mauris, ultricies at vehicula nec, ultricies dictum tellus.
+--
+
+[role="timeline",cols="3,8"]
+.[medium label label-warning]#November 15, 2013# [small clearfix]_posted by {author}_ image:images/books.png[]
+--
+[big]*Blog illustration*
+
+Why not illustrate this article by an image using inline macro.
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus condimentum dui id lectus viverra placerat.
+Sed arcu ipsum, posuere et scelerisque ac, eleifend id turpis. Ut vitae velit congue,
+sollicitudin nisi eu, vestibulum lorem. Praesent lectus turpis, ullamcorper vehicula volutpat interdum,
+vestibulum condimentum elit. Aliquam erat volutpat. Donec vulputate, dolor vitae molestie convallis,
+lacus elit auctor ipsum, sed pharetra augue justo id nisl. Vivamus imperdiet neque ac nunc malesuada,
+nec semper mauris viverra. Morbi venenatis ornare dictum. In pulvinar pellentesque felis,
+a bibendum mauris tempus interdum. Vestibulum vehicula diam id dolor tincidunt consequat.
+Fusce quis enim ultrices metus tincidunt malesuada. Vestibulum at placerat dolor.
+Aliquam venenatis aliquam mi sit amet cursus. Donec condimentum dolor ut posuere condimentum.
+Vivamus viverra nisl massa. Quisque turpis mauris, ultricies at vehicula nec, ultricies dictum tellus.
+--
