@@ -1,0 +1,40 @@
+= My Blog
+:author: Laurent Laville
+
+== Here are my posts
+
+[role="blog",cols="3,8",halign="right"]
+.Posted on 2013-11-17 [small clearfix]#Last updated {docdate} {doctime}#
+--
+[big]*Lorem ipsum*
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus condimentum dui id lectus viverra placerat.
+Sed arcu ipsum, posuere et scelerisque ac, eleifend id turpis. Ut vitae velit congue,
+sollicitudin nisi eu, vestibulum lorem. Praesent lectus turpis, ullamcorper vehicula volutpat interdum,
+vestibulum condimentum elit. Aliquam erat volutpat. Donec vulputate, dolor vitae molestie convallis,
+lacus elit auctor ipsum, sed pharetra augue justo id nisl. Vivamus imperdiet neque ac nunc malesuada,
+nec semper mauris viverra. Morbi venenatis ornare dictum. In pulvinar pellentesque felis,
+a bibendum mauris tempus interdum. Vestibulum vehicula diam id dolor tincidunt consequat.
+Fusce quis enim ultrices metus tincidunt malesuada. Vestibulum at placerat dolor.
+Aliquam venenatis aliquam mi sit amet cursus. Donec condimentum dolor ut posuere condimentum.
+Vivamus viverra nisl massa. Quisque turpis mauris, ultricies at vehicula nec, ultricies dictum tellus.
+--
+
+[role="blog",cols="3,8",halign="right"]
+.Posted on 2013-11-15 [small clearfix]#Last updated 2013-11-15 14:21:00 Paris, Madrid# 
+--
+[big]*Eye of the Tiger*
+
+image:images/tiger.png[role="pull-right"]
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus condimentum dui id lectus viverra placerat.
+Sed arcu ipsum, posuere et scelerisque ac, eleifend id turpis. Ut vitae velit congue,
+sollicitudin nisi eu, vestibulum lorem. Praesent lectus turpis, ullamcorper vehicula volutpat interdum,
+vestibulum condimentum elit. Aliquam erat volutpat. Donec vulputate, dolor vitae molestie convallis,
+lacus elit auctor ipsum, sed pharetra augue justo id nisl. Vivamus imperdiet neque ac nunc malesuada,
+nec semper mauris viverra. Morbi venenatis ornare dictum. In pulvinar pellentesque felis,
+a bibendum mauris tempus interdum. Vestibulum vehicula diam id dolor tincidunt consequat.
+Fusce quis enim ultrices metus tincidunt malesuada. Vestibulum at placerat dolor.
+Aliquam venenatis aliquam mi sit amet cursus. Donec condimentum dolor ut posuere condimentum.
+Vivamus viverra nisl massa. Quisque turpis mauris, ultricies at vehicula nec, ultricies dictum tellus.
+--
