@@ -1,0 +1,3 @@
+            <ul class="nav navbar-nav">
+                <li><a tabindex="-1" href="blog2.html"><span class="glyphicon glyphicon-backward"></span> Blog Panel</a></li>
+            </ul>
