@@ -1,0 +1,37 @@
+= My Project
+:author: Laurent Laville
+
+== Here are my releases
+
+[role="timeline",cols="3,8"]
+.[medium label label-warning]#Pre-release# [clearfix]*Released on: 2013-11-17*
+--
+[big]*Version 3.1.0RC1*
+
+This is the first release candidate for upcoming 3.1.0 release.
+
+link:bootstrap-3.1.0RC1.zip["AsciiDoc-Bootstrap 3.1.0RC1",role="primary"]
+link:source-3.1.0RC1.zip["Source code (zip)",role="info"]
+link:source-3.1.0RC1.tgz["Source code (tar.gz)",role="info"]
+--
+
+[role="timeline",cols="3,8"]
+.[medium label label-success]#Latest Release# [clearfix]*Released on: 2013-11-14*
+--
+[big]*Version 3.0.1*
+
+** [medium]*Changelog*
+
+*** add new attribute `bootstrap-backend-version` (latest version) and include it in the generator meta tag
+*** uses Bootstrap 3 template as default engine (attribute `bsver` sets on value 3) 
+
+** [medium]*Bug fixes*
+
+*** better alignement between text and badges on default footer.
+*** images generated by plantuml filter are now responsive.
+*** fix resources embedded for stand-alone documents.
+
+link:bootstrap-3.0.1.zip["AsciiDoc-Bootstrap 3.0.1",role="primary"]
+link:source-3.0.1.zip["Source code (zip)",role="info"]
+link:source-3.0.1.tgz["Source code (tar.gz)",role="info"]
+--
